...
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/library"
        app:layout_constraintBottom_toTopOf="@+id/iv_no_songs"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
