...
    <string name="alert_dialog_msg_error_parsing">Error parsing XML to import: xml was null/empty</string>
    <string name="import_successful">MusicXML(s) where imported successfully</string>
    <string name="import_unsuccessful">MusicXML(s) where not imported successfully</string>
    <string name="delete_successful"> was deleted successfully</string>
    <string name="delete_title">Delete sheet </string>
    <string name="delete_sheet_quest">Are you sure you want to delete this sheet?</string>
    <string name="log_in">Log In</string>
    <string name="log_out_question">Are you sure you want to log out?</string>
    <string name="log_in_successfull">Log in successful</string>
    <string name="error_user_doesnt_exist">User does not exist</string>
    <string name="error_folder_name_exists_already">Folder name already exists, pick a different folder name</string>
    <string name="home">Home</string>
    <string name="import_">Import</string>
...
